<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="childVm" type="in.co.ankitarora.mvvmsampletip.viewmodel.CalculatorViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/calculation_inputs"
            android:layout_margin="8dp"
            android:paddingBottom="26dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_main"
            tools:context=".view.MainActivity">

        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_check_amount"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/input_check_amount"
                      android:text="@={childVm.inputCheckAmount}"
                      android:hint="@string/check"
                      android:inputType="number"
                      android:selectAllOnFocus="true"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/input_layout_tip_percentage"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/input_layout_check_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/input_tip_percentage"
                      android:text="@={childVm.inputTipPercentage}"
                      android:hint="@string/tip_percentage"
                      android:inputType="numberDecimal"
                      android:selectAllOnFocus="true"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
                android:id="@+id/calculation_outputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="32dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_tip_percentage">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <TextView
                        android:id="@+id/bill_amount"
                        android:textAlignment="center"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{childVm.outputCheckAmount}"/>
                <TextView
                        android:id="@+id/bill_amount_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check"
                        android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <TextView
                        android:id="@+id/tip_amount"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@{childVm.outputTipAmount}"/>
                <TextView
                        android:id="@+id/tip_amount_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tip_amount"
                        android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <TextView
                        android:id="@+id/grand_total"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@{childVm.outputGrandTotal}"/>
                <TextView
                        android:id="@+id/grand_total_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/grand_total"
                        android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
                android:id="@+id/calculation_name"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:text="@{childVm.locationName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calculation_outputs"
        />

    </android.support.constraint.ConstraintLayout>
</layout>