<resources>
    <string name="app_name">MVVMSampleTip</string>
    <string name="action_settings">Settings</string>
    <string name="check">Check</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="grand_total">Total</string>
    <string name="tip_amount">Tip</string>
    <string name="dollar_amount">$%1$.02f</string>

    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_load">Load</string>
    <string name="save_hint">Enter Location</string>
</resources>
