<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="vm"
                type="in.co.ankitarora.mvvmsampletip.viewmodel.CalculatorViewModel"/>

    </data>
    <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:id="@+id/root"
            android:layout_height="match_parent"
            tools:context=".view.MainActivity">

        <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <include android:id="@+id/content"
                 app:childVm="@{vm}"
                 layout="@layout/content_main"/>

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:onClick="@{() -> vm.calculateTip()}"
                app:srcCompat="@drawable/ic_attach_money_white_24dp"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>